# droitdraft

./: .gitignore  DroitDraft - Conference Paper - V3.docx  DroitDraft - Conference Paper - V4.docx  PROJECT_STATUS.md  README.md  docker-compose.yml  error.txt  project.txt  research_extraction.tmp  research_mrr_3.tmp  research_results.tmp  research_retrieval.tmp  roadmap.md  run_tests.py  temp_index.pkl  testerror.txt  verify_project_status.py  ~$oitDraft - Conference Paper - V4.docx
backend/: .env.example  Dockerfile  check_store.py  clear_chroma.py  find_ni_tid.py  get_acts.py  get_ni_parent.py  pyproject.toml  requirements.txt  search_ni_act.py  temp_index.pkl
backend/app/: __init__.py  celery_app.py  main.py
backend/evaluation/: README.md  __init__.py  benchmark_config.json  discover_real_ids.py  eval_records_v2.jsonl  eval_records_v500.jsonl  eval_results_v2.md  extract_sample_text.py  generate_calibrated_mumbai_data.py  generate_mumbai_data.py  metrics.py  mumbai_benchmark_report.md  mumbai_benchmark_report_500.md  mumbai_calibrated_dataset.jsonl  mumbai_calibrated_report.md  mumbai_calibrated_results.jsonl  mumbai_eval_dataset.jsonl  mumbai_executed_results.jsonl  mumbai_final_distinction_report.md  mumbai_final_distinction_results.jsonl  mumbai_final_elite_report.md  mumbai_final_elite_results.jsonl  mumbai_final_graduation_report.md  mumbai_final_graduation_results.jsonl  mumbai_final_precision_report.md  mumbai_final_precision_results.jsonl  mumbai_final_report.md  mumbai_final_results.jsonl  reporting.py  runner.py  sample_records.jsonl  schema.py
(+193 files in other folders)
