[tool.poetry]
name = "droitdraft-backend"
version = "0.1.0"
description = "Backend for DroitDraft"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
black = "^23.10.0"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
